[package]
name = "mqtt_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
pretty_env_logger = "0.4.0"
rumqttc = "0.15.0"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
